k8s/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    application: MibWiki
spec:
  replicas: 1
  selector:
    matchLabels:
      application: MibWiki
      component: mysql
  serviceName: mysql
  template:
    metadata:
      name: mysql
      labels:
        application: MibWiki
        component: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        volumeName: mysql-data
        accessModes:
          - ReadWriteOnce
        resources:
          requests:            
            storage: 20Gi
