k8s/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/component: index
    app.kubernetes.io/part-of: mib-wiki
spec:
  selector:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/component: index
    app.kubernetes.io/part-of: mib-wiki
  ports:
    - name: elasticsearch
      port: 9200
      targetPort: 9200

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/component: index
    app.kubernetes.io/part-of: mib-wiki
  name: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
      app.kubernetes.io/component: index
      app.kubernetes.io/part-of: mib-wiki
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elasticsearch
        app.kubernetes.io/component: index
        app.kubernetes.io/part-of: mib-wiki
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: discovery.type
              value: single-node
          image: wikibase/elasticsearch:6.5.4-extra
          ports:
            - containerPort: 9200
          name: elasticsearch
          resources: {}
      restartPolicy: Always
