k8s/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    application: MibWiki
    component: mysql
spec:
  ports:
    - name: mysql
      port: 3306
