k8s/wikibase.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: wikibase
    app.kubernetes.io/component: wiki
    app.kubernetes.io/part-of: mib-wiki
  name: wikibase
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: wikibase
    app.kubernetes.io/component: wiki
    app.kubernetes.io/part-of: mib-wiki

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wikibase
  labels:
    app.kubernetes.io/name: wikibase
    app.kubernetes.io/component: wiki
    app.kubernetes.io/part-of: mib-wiki
spec:
  serviceName: wikibase
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wikibase
      app.kubernetes.io/component: wiki
      app.kubernetes.io/part-of: mib-wiki
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wikibase
        app.kubernetes.io/component: wiki
        app.kubernetes.io/part-of: mib-wiki
    spec:
      containers:
        - env:
            - name: DB_NAME
              value: mib_wiki
            - name: DB_PASS
              value: MarblesFound?
            - name: DB_SERVER
              value: mysql:3306
            - name: DB_USER
              value: mibs
            - name: MW_ADMIN_EMAIL
              value: admin@example.com
            - name: MW_ADMIN_NAME
              value: WikibaseAdmin
            - name: MW_ADMIN_PASS
              value: WikibaseDockerAdminPass
            - name: MW_ELASTIC_HOST
              value: elasticsearch
            - name: MW_ELASTIC_PORT
              value: "9200"
            - name: MW_WG_SECRET_KEY
              value: secretkey
            - name: QS_PUBLIC_SCHEME_HOST_AND_PORT
              value: http://localhost:9191
          image: wikibase/wikibase:1.34-bundle
          name: wikibase
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html/images
              name: mediawiki-images-data
            # - mountPath: /quickstatements/data
            #   name: quickstatements-data
      restartPolicy: Always
      volumes:
        - name: mediawiki-images-data
          persistentVolumeClaim:
            claimName: mediawiki-images-data
        # - name: quickstatements-data
        #   persistentVolumeClaim:
        #     claimName: quickstatements-data
  volumeClaimTemplates:
    - metadata:
        name: mediawiki-images-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: managed-premium
        resources:
          requests:            
            storage: 10Gi
    # - metadata:
    #     name: quickstatements-data
    #   spec:
    #     accessModes:
    #       - ReadWriteOnce
    #     storageClassName: managed-premium
    #     resources:
    #       requests:            
    #         storage: 10Gi
