k8s/mib-wiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mib-wiki-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - mib.wiki
    secretName: mib-wiki-cert
  rules:
  - host: mib.wiki
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mib-wiki
            port:
              number: 80
